Change all instances of Trello

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,7 +20,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.download %}
-          <h3><a href="{{ site.download }}">Download Trello for Mac</a> <small>(v1.0.2)</small></h3>
+          <h3><a href="{{ site.download }}">Download Overcast for Mac</a> <small>(v1.0.2)</small></h3>
         {% endif %}
 
         {% if site.github.is_project_page %}
