--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html,
 body {
   width: 100%; height: 100%; margin: 0;
-  background: #0079BF;
+  background: #fff;
   display: flex;
   align-items: center;
 }
