--- a/style.css
+++ b/style.css
@@ -6,17 +6,29 @@ body {
   align-items: center;
 }
 .loader {
-  background-image: url("loader.gif");
-  background-size: 18px 18px;
+  background-image: url("loader.svg");
+  background-size: contain;
   display: none;
-  height: 18px;
-  width: 18px;
+  height: 48px;
+  width: 48px;
   position: absolute;
   left: 50%;
+  margin: 0 auto;
 }
 .loader.is-loading {
   display: block;
-  margin: 0 auto;
+  animation: loader infinite 0.5s;
+}
+@keyframes loader {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(.90);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 webview {
   width: 100%;
